--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css"  type="text/css">
     <title> Modish Trade</title>
-    <link rel="icon" type="image/x-icon" href="/images/123.jpg">
+    <link rel="icon" type="image/x-icon" href="images/123.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.css">
 
 		<!-- STYLE CSS -->
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="style1.css"  type="text/css">
 
 </head>
 
@@ -24,7 +24,7 @@
     <div class="mainBody">
     <div class="header1">
 <form action="">
-            <img class="logo" src="images/logo.png">
+            <img class="logo" src="images/logo.png" >
                     <input type="search" class="search" placeholder="Search for Products...">
                     <button type="submit">Search</button>
                     <span class="glyphicon glyphicon-filter" style="left:300px"><b>Filter</b></span>
@@ -162,19 +162,22 @@
 
 
     <!-- =============================== * product * ============================================ -->
-    <div class="First_row">
+    <div class="First_row" style="position: relative; display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 20px;" >
 
     <%dataList.forEach(data => {%>
         
     
 
-    <div class="box">
-            <img class="cardimg" src="images/123.jpg">
-            <h2><%= data.price %></h2>
-            <p><%= data.model_name %></p>
+    <div class="box" >
+            <!-- <img class="cardimg" style="box-shadow: #696969;" src="<%= data.photosurl %>"> -->
+            <img class="cardimg" style="box-shadow: #696969;" src="/images/123.jpg">
+            <h2 style="color: black;position: relative;text-transform: uppercase;"><%= data.model_name %></h2>
+            <h4 style="color: black;margin-left: 20px;margin-top: 10px;">Price: ₹<%= data.price %></h4>
             <div class="addres_data">
-                <p><%= data.address %></p>
-                <p>Today</p>
+                <p style="color: black;">Address<%= data.address %></p>
+                <p style="color: black;">DOP: <%=data.date_of_purchase %></p>
             </div>
             <div><Button class="makeDeal">Make a Deal</Button></div>
         </a>
@@ -225,7 +228,10 @@
 
 
 
-    <div class="Main_footer">
+    <div class="Main_footer" style="background-color: #74c38df3;color: aliceblue;margin-top: 20px;">
+      <br>
+      <br>
+      <hr>
         <div class="footer">
             <div class="footer_box">
                 <h2>POPULAR LOCATIONS</h2>
@@ -243,13 +249,13 @@
             </div>
             <div class="footer_box">
                 <h2>ABOUT US</h2>
-                <p> About OLX Group</p>
+                <p> About MODISH Group</p>
                 <p>Careers</p>
                 <p>Contact Us</p>
-                <p>OLXPeople</p>
+                <p>MODISHPeople</p>
             </div>
             <div class="footer_box">
-                <h2>OLX</h2>
+                <h2>MODISH</h2>
                 <p> Help</p>
                 <p>Legal & Privacy information</p>
                 <p>Blog</p>
