--- a/public/index.css
+++ b/public/index.css
@@ -369,8 +369,11 @@ body {
 
 
 .First_row{
-     display: grid;
-  column-gap: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    width: 1200px;
+    margin: auto;
+    margin-top: 35px;
 }
 .box img{
 width: 250px;
@@ -378,7 +381,7 @@ width: 250px;
 .box{
     border: 1px solid rgb(197, 196, 196);
     width: 275px;
-    height: 400px;
+    height: 350px;
     cursor: pointer;
     background-color: wheat;
     border-radius: 16px;
@@ -392,9 +395,9 @@ width: 250px;
     text-decoration: none;
     color: black;
 }
-/* .box h2{
+.box h2{
     padding: 5px 0 0 20px;
-} */
+}
 .box p{
     padding: 0 0 10px 20px ;
     color: #6f8a94;
