--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.css">
+    <!-- <link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.css"> -->
 
 		<!-- STYLE CSS -->
 		<link rel="stylesheet" href="style1.css"  type="text/css">
@@ -28,7 +28,7 @@
                     <input type="search" class="search" placeholder="Search for Products...">
                     <button type="submit">Search</button>
                     <span class="glyphicon glyphicon-filter" style="left:300px"><b>Filter</b></span>
-                    <a href="login.html" class="btn btn-secondary btn-lg active " style="left:870px;position: relative;" role="button" data-toggle="modal" data-target="#LoginModal"  aria-pressed="true">Login</a>
+                    <a href="login.html" id="loginButton" class="btn btn-secondary btn-lg active " style="left:870px;position: relative;" role="button" data-toggle="modal" data-target="#LoginModal"  aria-pressed="true">Login</a>
                     <a href="sign_up.html" class="btn btn-secondary btn-lg active " style="left:900px;position: relative;" role="button"  aria-pressed="true">Sign-up</a>
                 </form>
                     <!-- Login Model -->
@@ -168,22 +168,26 @@
 
     <%dataList.forEach(data => {%>
         
+      
+<div class="box" >
+  
+ <a href="/details/<%= data._id %>">
+ <img class="cardimg" style="box-shadow: #696969;" src="/images/123.jpg">
+ <h2 style="color: black;position: relative;text-transform: uppercase;"><%= data.model_name %></h2>
+ <h4 style="color: black;margin-left: 20px;margin-top: 10px;">Price: ₹<%= data.price %></h4>
+ <div class="addres_data">
+     <p style="color: black;">Address<%= data.address %></p>
+     <p style="color: black;">DOP: <%=data.date_of_purchase %></p>
+ </div>
+ <div><Button class="makeDeal">Make a Deal</Button></div>
+</a>
+</div>
+
+<%})%> 
     
 
-    <div class="box" >
-            <!-- <img class="cardimg" style="box-shadow: #696969;" src="<%= data.photosurl %>"> -->
-            <img class="cardimg" style="box-shadow: #696969;" src="/images/123.jpg">
-            <h2 style="color: black;position: relative;text-transform: uppercase;"><%= data.model_name %></h2>
-            <h4 style="color: black;margin-left: 20px;margin-top: 10px;">Price: ₹<%= data.price %></h4>
-            <div class="addres_data">
-                <p style="color: black;">Address<%= data.address %></p>
-                <p style="color: black;">DOP: <%=data.date_of_purchase %></p>
-            </div>
-            <div><Button class="makeDeal">Make a Deal</Button></div>
-        </a>
-    </div>
+     
 
-    <%})%>
 
 
 </div>
@@ -270,6 +274,26 @@
        
 
     </script>
+
+<script>
+  // Get a reference to the login button
+  const loginButton = document.getElementById('loginButton');
+
+  // Add a click event listener to the button
+  loginButton.addEventListener('click', () => {
+    // Make a GET request to the '/login' route
+    fetch('/login')
+      .then(response => response.text())
+      .then(data => {
+        // Replace the current page content with the data from the '/login' route
+        document.documentElement.innerHTML = data;
+      })
+      .catch(error => {
+        console.error('Error fetching login page:', error);
+      });
+  });
+</script>
+
 
 
 <script>
