buy and rent page

--- a/views/rent.ejs
+++ b/views/rent.ejs
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- <link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.css"> -->
+    <link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.css">
 
 		<!-- STYLE CSS -->
-		<link rel="stylesheet" href="style.css"  type="text/css">
+		<link rel="stylesheet" href="style1.css"  type="text/css">
 
 </head>
 
@@ -161,9 +161,8 @@
 
 
 
-    <!-- =============================== * product * ============================================ -->  
-     
-   <div class="First_row" style="position: relative; display: grid;
+    <!-- =============================== * product * ============================================ -->
+    <div class="First_row" style="position: relative; display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 20px;" >
 
