--- a/views/buy.ejs
+++ b/views/buy.ejs
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- <link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.css"> -->
+    <link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.css">
 
 		<!-- STYLE CSS -->
-		<link rel="stylesheet" href="style.css"  type="text/css">
+		<link rel="stylesheet" href="style1.css"  type="text/css">
 
 </head>
 
@@ -161,9 +161,8 @@
 
 
 
-    <!-- =============================== * product * ============================================ -->  
-     
-   <div class="First_row" style="position: relative; display: grid;
+    <!-- =============================== * product * ============================================ -->
+    <div class="First_row" style="position: relative; display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 20px;" >
 
@@ -173,7 +172,7 @@
 <div class="box" >
   
  <a href="/details/<%= data._id %>">
- <img class="cardimg" style="box-shadow: #696969;" src="/users/<%= data.photosurl %>">
+ <img class="cardimg" style="box-shadow: #696969;" src="/images/123.jpg">
  <h2 style="color: black;position: relative;text-transform: uppercase;"><%= data.model_name %></h2>
  <h4 style="color: black;margin-left: 20px;margin-top: 10px;">Price: ₹<%= data.price %></h4>
  <div class="addres_data">
