Login Signup page

--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -29,7 +29,9 @@
                     <input type="search" class="search" placeholder="Search for Products...">
                     <button type="submit">Search</button>
                     <a href="https://web.telegram.org/a/#6090096316"> <i class="fa fa-telegram" style="position:relative;left:300px;font:24px;color:rgb(0, 107, 221)">ModishTradeBot</i></a>
-                </form>
+                    
+                   <button type" id="switchrent" name="switch" value=0 style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ;margin-left: 115vh;" onclick="sell()">Sell a Product</button>
+                  </form>
                    
                        
     <!-- =============================== * navbar * ============================================ -->
