--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,12 +23,22 @@
 <body>
     <div class="mainBody">
     <div class="header1">
-<form action="">
+      <div class="1" style="display:flex">
+        <div class="2">
+          <form action="">
             <img class="logo" src="images/logo.png" >
                     <input type="search" class="search" placeholder="Search for Products...">
                     <button type="submit">Search</button>
                    <a href="https://web.telegram.org/a/#6090096316"> <i class="fa fa-telegram" style="position:relative;left:300px;font:24px;color:rgb(0, 107, 221)">ModishTradeBot</i></a>
-                </form> 
+                   
+                </form>
+        </div>
+        <div class="3">
+          <button type" id="switchrent" name="switch" value=2 style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ; margin-left: 120vh;margin-top: 1vh;" onclick="sell()">Sell a product</button>
+        </div>
+              
+      </div>
+
                        
     <!-- =============================== * navbar * ============================================ -->
                 <div style="background-color: #cee6e7; padding: 10px;width: 100%;justify-content: space-between;">
@@ -92,8 +102,7 @@
                        
                       <button type" id="switchbuy" name="switch" value=1  style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ;" onclick="buy()">BUY</button>
                       <button type" id="switchrent" name="switch" value=0 style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ;" onclick="rent()">RENT</button>
-                       <button type" id="switchrent" name="switch" value=0 style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ;" onclick="donate()">Donate</button>
-                       <button type" id="switchrent" name="switch" value=0 style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ;" onclick="sell()">Sell a Product</button>
+                      <button type" id="switchrent" name="switch" value=2 style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ;" onclick="donate()">Donate</button>
                         
                      
                 </div>
