--- a/views/rent.ejs
+++ b/views/rent.ejs
@@ -110,13 +110,13 @@
 <div id="carouselExample" class="carousel slide" style="width: 1475px; height:550px;   margin-bottom: 15px;margin-left: 25px;margin-right: 25px;">
     <div class="carousel-inner " >
       <div class="carousel-item active">
-        <img src="images/127.png" class="d-block w-100"  alt="..." style="height:555px;border-radius: 20px;">
+        <img src="images/127.jpg" class="d-block w-100"  alt="..." style="height:555px;border-radius: 20px;">
       </div>
       <div class="carousel-item">
-        <img src="images/128.png" class="d-block w-100"  alt="..." style="height:555px;border-radius: 20px;">
+        <img src="images/128.jpg" class="d-block w-100"  alt="..." style="height:555px;border-radius: 20px;">
       </div>
       <div class="carousel-item">
-            <img src="images/126.png" class="d-block w-100" alt="..." style="height:555px;border-radius: 20px;">
+            <img src="images/126.jpg" class="d-block w-100" alt="..." style="height:555px;border-radius: 20px;">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
