--- a/views/bike.ejs
+++ b/views/bike.ejs
@@ -34,7 +34,7 @@
                 </form>
         </div>
         <div class="3">
-          <button type" id="switchrent" name="switch" value=2 style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ; margin-left: 120vh;margin-top: 1vh;" onclick="sell()">Sell a product</button>
+          <button type" id="switchrent" name="switch" value=2 style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ; margin-left: 120vh;margin-top: 1vh;" onclick="sell()">Sell/Rent/Donate</button>
         </div>
               
       </div>
@@ -117,7 +117,7 @@
   </div>
   <div class="product">
   <div class="heading2"><h1>BUY SELL DEMAND</h1></div>
-  <div class="recommText"><p><h3>Our Recommendations: </h3></p></div>
+  <div class="recommText"><p><h3>Category: Bikes and Car</h3></p></div>
 
 
 
