--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -35,7 +35,7 @@
                 </form>
         </div>
         <div class="3">
-          <button type" id="switchrent" name="switch" value=2 style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ; margin-left: 120vh;margin-top: 1vh;" onclick="sell()">Sell a product</button>
+          <button type" id="switchrent" name="switch" value=2 style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ; margin-left: 120vh;margin-top: 1vh;" onclick="sell()">Sell/Rent/Donate</button>
         </div>
               
       </div>
