--- a/views/demand.ejs
+++ b/views/demand.ejs
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="index.css"  type="text/css">
     <title> Modish Trade</title>
-    <link rel="icon" type="image/x-icon" href="/images/logo.png">
+    <link rel="icon" type="image/x-icon" href="images/123.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- <link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.css"> -->
+    <link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 		<!-- STYLE CSS -->
-		<link rel="stylesheet" href="style.css"  type="text/css">
+		<link rel="stylesheet" href="style1.css"  type="text/css">
 
 </head>
 
@@ -34,11 +35,10 @@
                 </form>
         </div>
         <div class="3">
-          <button type" id="switchrent" name="switch" value=2 style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ; margin-left: 110vh;margin-top: 1vh;" onclick="sell()">Sell/Rent/Donate/Demand</button>
+          <button type" id="switchrent" name="switch" value=2 style="background-color: #01404F;padding: 5px;border-radius: 8px;color:white ; margin-left: 120vh;margin-top: 1vh;" onclick="sell()">Sell/Rent/Donate</button>
         </div>
               
       </div>
-
                        
     <!-- =============================== * navbar * ============================================ -->
     <style>
@@ -117,14 +117,13 @@
   </div>
   <div class="product">
   <div class="heading2"><h1>BUY SELL DEMAND</h1></div>
-  <div class="recommText"><p><h3>Our Recommendations: </h3></p></div>
+  <div class="recommText"><p><h3>Items for demands: </h3></p></div>
 
 
 
 
-    <!-- =============================== * product * ============================================ -->  
-     
-   <div class="First_row" style="position: relative; display: grid;
+    <!-- =============================== * product * ============================================ -->
+    <div class="First_row" style="position: relative; display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 20px;" >
 
@@ -138,9 +137,10 @@
  <h2 style="color: black;position: relative;text-transform: uppercase;"><%= data.model_name %></h2>
  <h4 style="color: black;margin-left: 20px;margin-top: 10px;">Price: ₹<%= data.price %></h4>
  <div class="addres_data">
-     <p style="color: black;position: relative;left: 150px;">DOP: <%=data.date_of_purchase %></p>
+     
+     <p style="color: black;">DOP: <%=data.date_of_purchase %></p>
  </div>
- <div><Button class="makeDeal">Make a Deal</Button></div>
+ <div><Button class="makeDeal">See the demand</Button></div>
 </a>
 </div>
 
@@ -153,7 +153,42 @@
 
 </div>
     
-  
+        <!-- <div class="First_row">
+            
+            <div class="box">
+                <img class="cardimg" src="images/123.jpg">
+                <h2> ₹4800 </h2>
+                <p> xbox one s</p>
+                <div class="addres_data">
+                    <p>CHEMBUR, MUMBAI</p>
+                    <p> JUL 27</p>
+                </div>
+                <div><Button class="makeDeal">Make a Deal</Button></div>
+            </div>
+            <div class="box">
+                <img class="cardimg" src="images/123.jpg">
+                <h2> ₹7000</h2>
+                <p> Refrigerator</p>
+                <div class="addres_data">
+                    <p>DHARAVI, MUMBAI</p>
+                    <p> Today </p>
+                </div>
+                <div><Button class="makeDeal">Make a Deal</Button></div>
+            </div>
+            <div class="box">
+                <img class="cardimg" src="images/123.jpg">
+                <h2> ₹8,00,000 </h2>
+                <p> Mitsubishi Pajero (2012) </p>
+                <div class="addres_data">
+                    <p>VERSOVA, MUMBAI</p>
+                    <p> Today </p>
+                </div>
+                <div><Button class="makeDeal">Make a Deal</Button></div>
+            </div>
+        </div>
+
+        
+    </div> -->
     <!-- =============================== * footer * ============================================ -->
 
 
@@ -202,16 +237,6 @@
     </script>
 
 <script>
- 
-
-function sell(){
-  window.location.replace('http://127.0.0.1:8080/sell');
-}
-
-
-function buy(){
-  window.location.replace('http://127.0.0.1:8080/buy');
-}
 
 
 function rent(){
@@ -220,6 +245,10 @@ function rent(){
 
 function donate(){
   window.location.replace('http://127.0.0.1:8080/donate');
+}
+
+function sell(){
+  window.location.replace('http://127.0.0.1:8080/sell');
 }
 
 function mobile(){
@@ -237,6 +266,7 @@ function furniture(){
 function books(){
   window.location.replace('http://127.0.0.1:8080/books');
 }
+
 </script>
 
 
