--- a/views/product.ejs
+++ b/views/product.ejs
@@ -20,14 +20,14 @@
   <form action="">
       <div class="cont" style="color:black">
           <img class="logo" src="/images/logo.png">
-          <input type="search" class="search" placeholder="Search for Products...">
-          <button type="submit">Search</button>
-          <span class="glyphicon glyphicon-filter" style="left:30vh"><b>Filter</b></span>
+          <!-- <input type="search" class="search" placeholder="Search for Products...">
+          <button type="submit">Search</button> -->
+          <!-- <span class="glyphicon glyphicon-filter" style="left:30vh"><b>Filter</b></span>
           <a href="#" style="padding: 0 3vh;padding-left: 65vh; color: black;">Wishlist</a>
                       <a  href="#" style="padding: 0 3vh; color: black">Your Listing</a>
-                      <a  href="#" style="padding: 0 3vh; color: black">Your Orders</a>
-                      <button class="btn " type="button" style="background-color:#01404F;color: white; margin-left: 8vh;">Demand a product</button>
-                      <i class="fa fa-user" style="color:black;margin-left: 8vh;"></i>
+                      <a  href="#" style="padding: 0 3vh; color: black">Your Orders</a> -->
+                      <!-- <button class="btn " type="button" style="background-color:#01404F;color: white; margin-left: 8vh;">Demand a product</button> -->
+                      <!-- <i class="fa fa-user" style="color:black;margin-left: 8vh;"></i> -->
       </div>
              
                       
@@ -35,7 +35,7 @@
                      
   
       <!-- =============================== * navbar * ============================================ -->
-                  <div style="background-color: #cee6e7; padding: 10px;width: 100%;justify-content: space-between;">
+                  <!-- <div style="background-color: #cee6e7; padding: 10px;width: 100%;justify-content: space-between;">
                       <button class="btn btn-primary dropdown-toggle textButton"  type="button" data-bs-toggle="dropdown">
                           Mobile Phones
                            
@@ -97,7 +97,7 @@
       
               
           
-      </div>
+      </div> -->
 
     <div class="container">
 
@@ -110,10 +110,10 @@
                     <img src="/users/<%= card.photosurl %>" style="height:60vh;border-radius: 16px;" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/127.jpeg" style="height:60vh;border-radius: 16px;" class="d-block w-100" alt="...">
+                    <img src="/users/<%= card.photosurl %>" style="height:60vh;border-radius: 16px;" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/126.jpeg" style="height:60vh;border-radius: 16px;" class="d-block w-100" alt="...">
+                    <img src="/users/<%= card.photosurl %>" style="height:60vh;border-radius: 16px;" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
